crates/cronet-sys/include/cronet_rs_dev.h

typedef const char* Cronet_String;
typedef struct Cronet_Engine* Cronet_EnginePtr;