crates/cronet-sys/src/bindings_pinned.rs

unsafe extern "C" {
    pub fn bidirectional_stream_create(
        engine: *mut stream_engine,
        annotation: *mut ::core::ffi::c_void,
        callback: *const bidirectional_stream_callback,
    ) -> *mut bidirectional_stream;
}
unsafe extern "C" {
    pub fn bidirectional_stream_destroy(stream: *mut bidirectional_stream) -> ::core::ffi::c_int;
}
unsafe extern "C" {
    #[doc = " Disables or enables auto flush. By default, data is flushed after\n every bidirectional_stream_write(). If the auto flush is disabled,\n the client should explicitly call bidirectional_stream_flush to flush\n the data."]
    pub fn bidirectional_stream_disable_auto_flush(
        stream: *mut bidirectional_stream,
        disable_auto_flush: bool,
    );
}
unsafe extern "C" {
    #[doc = " Delays sending request headers until bidirectional_stream_flush()\n is called. This flag is currently only respected when QUIC is negotiated.\n When true, QUIC will send request header frame along with data frame(s)\n as a single packet when possible."]
    pub fn bidirectional_stream_delay_request_headers_until_flush(
        stream: *mut bidirectional_stream,
        delay_headers_until_flush: bool,
    );
}
unsafe extern "C" {
    pub fn bidirectional_stream_start(
        stream: *mut bidirectional_stream,
        url: *const ::core::ffi::c_char,
        priority: ::core::ffi::c_int,
        method: *const ::core::ffi::c_char,
        headers: *const bidirectional_stream_header_array,
        end_of_stream: bool,
    ) -> ::core::ffi::c_int;
}
unsafe extern "C" {
    pub fn bidirectional_stream_read(
        stream: *mut bidirectional_stream,
        buffer: *mut ::core::ffi::c_char,
        capacity: ::core::ffi::c_int,
    ) -> ::core::ffi::c_int;
}
unsafe extern "C" {
    pub fn bidirectional_stream_write(
        stream: *mut bidirectional_stream,
        buffer: *const ::core::ffi::c_char,
        buffer_length: ::core::ffi::c_int,
        end_of_stream: bool,
    ) -> ::core::ffi::c_int;
}
unsafe extern "C" {
    #[doc = " Flushes pending writes. This method should not be called before invocation of\n on_stream_ready() method of the bidirectional_stream_callback.\n For each previously called bidirectional_stream_write()\n a corresponding on_write_completed() callback will be invoked when the buffer\n is sent."]
    pub fn bidirectional_stream_flush(stream: *mut bidirectional_stream);
}
unsafe extern "C" {
    pub fn bidirectional_stream_cancel(stream: *mut bidirectional_stream);
}
unsafe extern "C" {
    pub fn bidirectional_stream_is_done(stream: *mut bidirectional_stream) -> bool;
}
pub type Cronet_DialerFunc = ::core::option::Option<
    unsafe extern "C" fn(
        context: *mut ::core::ffi::c_void,
        address: *const ::core::ffi::c_char,
        port: u16,
    ) -> ::core::ffi::c_int,
>;
pub type Cronet_UdpDialerFunc = ::core::option::Option<
    unsafe extern "C" fn(
        context: *mut ::core::ffi::c_void,
        address: *const ::core::ffi::c_char,
        port: u16,
        out_local_address: *mut ::core::ffi::c_char,
        out_local_port: *mut u16,
    ) -> ::core::ffi::c_int,
>;
unsafe extern "C" {
    pub fn Cronet_Engine_GetStreamEngine(arg1: Cronet_EnginePtr) -> *mut stream_engine;
}
unsafe extern "C" {
    pub fn Cronet_Engine_SetDialer(
        arg1: Cronet_EnginePtr,
        arg2: Cronet_DialerFunc,
        arg3: *mut ::core::ffi::c_void,
    );
}
unsafe extern "C" {
    pub fn Cronet_Engine_SetUdpDialer(
        arg1: Cronet_EnginePtr,
        arg2: Cronet_UdpDialerFunc,
        arg3: *mut ::core::ffi::c_void,
    );
}
unsafe extern "C" {
    pub fn Cronet_Engine_CloseAllConnections(arg1: Cronet_EnginePtr);
}
unsafe extern "C" {
    pub fn Cronet_CreateCertVerifierWithRootCerts(arg1: Cronet_String) -> *mut ::core::ffi::c_void;
}
unsafe extern "C" {
    pub fn Cronet_Engine_SetMockCertVerifierForTesting(
        arg1: Cronet_EnginePtr,
        arg2: *mut ::core::ffi::c_void,
    );
}
